@@ -34,6 +34,8 @@ Miscellaneous
 Bug Fixes
 =========
 
+ * (SC104) Possible NPE in Sybase specific JDBC Connection.
+ 
 3rd Party
 ========= 
             
